week6/todo/styles.css
.divToDoFrame
{
  margin: auto;
  border: solid 2px red;
  background-color: black;
  max-width: 700px;
  padding-top: 10px;
}

.divToDoList
{
  border: solid 2px blue;
  width: 85.5%;
  height: 600px;
  padding: 20px 40px 40px 40px;
  margin: 10px;
  background-color: lightgray;
  overflow-y: auto;
}

.divToDoStatus
{
  border: solid 2px green;
  width: 94%;
  height: 100px;
  background-color: darkgray;
  padding: 10px;
  margin: 10px;
  text-align: center;
}

.remainingTasks
{
  display: inline-block;
  margin: 5px 25px 10px 0px;
}

.completedTasks
{
  display: inline;
  margin: 5px 0px 10px 25px;
}

.toDoTitle
{
  text-align: center;
  color: white;
  display: inline;
  margin-left: 90px;
  /* position: fixed;
  left: 0;
  right: 0;
  top: 0; */
}

.statusTitle
{
  margin: 0px 0px 0px 0px;
}

.showToDoListTitle
{
  margin-top: 10px;
  font-size: 30px;
}

ul
{
  list-style: none;
  padding: 0;
}

li
{
  padding: 5px 10px 0 10px;
}

.toDoChecked
{
  background-color: greenyellow;
  /* background-image: repeating-linear-gradient(bottom left, #900 20px, #FC0 30px, #900 40px); */
  border-radius: 20px;
  /* padding: 10px 10px 0 10px; */
  margin-bottom: 20px;
}

.addToDoButton
{
  background-color: greenyellow;
  color: black;
  border-radius: 10px;
  padding: 5px;
  margin: 0 20px 0 40px;
}

.showAllButton
{
  font-size: 13px;
  background-color: greenyellow;
  color: black;
  border-radius: 10px;
  padding: 5px;
  margin: 15px 25px 0 0px;
  width: 120px;
}

.showAllButton:hover
{
  background-color: darkgreen;
  color: white;
}

.showActiveButton
{
  font-size: 13px;
  background-color: greenyellow;
  color: black;
  border-radius: 10px;
  padding: 5px;
  margin: 15px 25px 0 0px;
  width: 120px;
}

.showActiveButton:hover
{
  background-color: darkgreen;
  color: white;
}

.showCompletedButton
{
  font-size: 13px;
  background-color: greenyellow;
  color: black;
  border-radius: 10px;
  padding: 5px;
  margin: 15px 0px 0 0px;
  width: 120px;
}

.showCompletedButton:hover
{
  background-color: darkgreen;
  color: white;
}

.toDoButton
{
  background-color: greenyellow;
  color: black;
  border-radius: 10px;
  padding: 5px;
  margin: 20px 20px 0 0;
}

.cancelToDoButton
{
  background-color: darkred;
  color: white;
  border-radius: 10px;
  padding: 5px;
  margin: 20px 20px 0 0;
}

.addToDoButton:hover
{
  background-color: darkgreen;
  color: white;
}

.toDoDescription
{
  color: black;
  border-radius: 10px;
  border: 3px solid black;
  padding: 5px;
  width: 100%;
  height: 100px;
  background-color: white;
  display: block;
}

.deleteButton
{
  background-color: darkred;
  color: white;
  border-radius: 10px;
  padding: 5px;
  /* position: relative;
  right: -300px; */
}

.deleteButtonChecked
{
  background-color: darkred;
  color: white;
  border-radius: 10px;
  padding: 5px;
  position: relative;
  right: -280px;
}

.deleteButton:hover
{
  background-color: red;
}

.deleteButtonChecked:hover
{
  background-color: red;
}


.itemForm
{
  float: left;
}

.toDoItem
{
  display: inline;
  margin: 0 20px 0 20px;
}

.toDoItemChecked
{
  display: inline;
  margin: 0 20px 0 20px;
  text-decoration: line-through;
  font-weight: 100;
}

.hidden
{
  display: none;
}

